--- a/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-grouping-list.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-grouping-list.html
@@ -4,6 +4,8 @@
 <link rel="import" href="../../../../lib/iron-icons/iron-icons.html">
 <link rel="import" href="../../../../lib/cotton-checkbox/cotton-checkbox.html">
 <link rel="import" href="../../../../lib/cotton-cookies/cotton-cookies.html">
+<link rel="import" href="../../alexandriatimenavigator/alexandria-pocket-time-navigator.html">
+<link rel="import" href="../../alexandriatimerangenavigator/alexandria-pocket-time-range-navigator.html">
 <link rel="import" href="alexandria-catalog-grouping.html">
 
 <script src="../../../../lib/cotton-cookies/cookies.js"></script>
@@ -21,10 +23,18 @@
                 <li class="empty layout vertical center center-justified">[[NoGroupings]]</li>
             </template>
             <template is="dom-repeat" items="[[groupingList]]" as="grouping">
-                <li class="grouping">
-                    <paper-icon-button icon="icons:check"></paper-icon-button>
-                    <alexandria-catalog-grouping grouping$="[[grouping]]" on-selection-change="_handleGroupingChange"></alexandria-catalog-grouping>
-                </li>
+                <!--<template is="dom-if" if="[[grouping.temporal]]">-->
+                    <!--<li class="grouping">-->
+                        <!--<cotton-zombie display="AlexandriaTimeRangeNavigator" widget="AlexandriaPocketTimeRangeNavigator"></cotton-zombie>-->
+                        <!--<cotton-zombie display="AlexandriaTimeNavigator" widget="AlexandriaPocketTimeNavigator"></cotton-zombie>-->
+                    <!--</li>-->
+                <!--</template>-->
+                <!--<template is="dom-if" if="[[!grouping.temporal]]">-->
+                    <li class="grouping">
+                        <paper-icon-button icon="icons:check"></paper-icon-button>
+                        <alexandria-catalog-grouping grouping$="[[grouping]]" on-selection-change="_handleGroupingChange"></alexandria-catalog-grouping>
+                    </li>
+                <!--</template>-->
             </template>
         </ul>
     </template>
