--- a/alexandria/activity-elements-activity/src/widgets/alexandria-temporal-time-catalog.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-temporal-time-catalog.html
@@ -27,7 +27,7 @@
             <div class="main flex">
                 <a class="clear" hidden$="[[!_filtered]]" on-tap="clearFilter">[[ClearFilterr]]</a>
                 <cotton-zombie display="AlexandriaCatalogViewList" widget="AlexandriaCatalogViewList"></cotton-zombie>
-                <cotton-zombie display="AlexandriaTimeNavigator" widget="AlexandriaTimeNavigator" object$="[[display.id]]"></cotton-zombie>
+                <cotton-zombie display="AlexandriaTimeNavigator" widget$="AlexandriaTime[[_navigatorLayout]]Navigator" object$="[[display.id]]"></cotton-zombie>
             </div>
         </div>
         <div id="panel" name="panel" class="layout vertical flex hidden" style="height:calc(100% - 60px);"></div>
@@ -183,7 +183,8 @@
             properties : {
                 _catalog: Object,
                 _filtered : { type: Boolean, value: function() { return false; }},
-                _hideGroupings: { type: Boolean, value: function() { return true; }}
+                _hideGroupings: { type: Boolean, value: function() { return true; }},
+                _navigatorLayout : { type: String, value: function() { return ""; }}
             },
 
             attached : function() {
@@ -217,6 +218,10 @@
                 var navigator = this.querySelector("alexandria-time-navigator");
                 if (navigator != null) navigator.hidden = true;
                 $(this.querySelector("alexandria-catalog-view-list")).addClass("full");
+            },
+
+            _refreshNavigatorLayout : function(layout) {
+                this._navigatorLayout = layout;
             },
 
             _handleGroupingChange : function(event) {
