--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-card.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-card.html
@@ -38,7 +38,7 @@
 
             properties : {
                 card : String,
-                styles : { type: String, value: function() { return ""; } }
+                style : { type: String, value: function() { return ""; } }
             },
 
             attached: function () {
