--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-hyperlinks.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-hyperlinks.html
@@ -1,15 +1,14 @@
 <link rel="import" href="../../../../lib/polymer/polymer.html">
-<link rel="import" href="../../../../lib/cotton-translator/cotton-translator-behavior.html">
-<link rel="import" href="alexandria-mold-hyperlink.html">
+<link rel="import" href="alexandria-hyperlink.html">
 
-<dom-module id="alexandria-mold-hyperlinks">
+<dom-module id="alexandria-hyperlinks">
 
     <template>
         <div hidden$="[[!items.length]]">
             <div class="title" hidden$="[[!title]]">[[title]]</div>
             <ul class="layout horizontal flex wrap">
                 <template is="dom-repeat" items="[[items]]">
-                    <li><alexandria-mold-hyperlink styles$="[[styles]]" name="[[item.name]]" label="[[item.label]]"></alexandria-mold-hyperlink></li>
+                    <li><alexandria-hyperlink style$="[[styles]]" name="[[item.name]]" label="[[item.label]]"></alexandria-hyperlink></li>
                 </template>
             </ul>
         </div>
@@ -33,28 +32,14 @@
     </style>
 
     <script>
-        const AlexandriaMoldHyperlinksDictionary = {
-            es: {
-            },
-            en: {
-            }
-        };
-
         Polymer({
-            is: 'alexandria-mold-hyperlinks',
-
-            behaviors: [ CottonBehaviors.TranslatorBehavior ],
+            is: 'alexandria-hyperlinks',
 
             properties : {
                 title : { type: String, value: function() { return null; } },
                 items : Array,
                 styles : String
-            },
-
-            attached: function () {
-                this.translate(AlexandriaMoldHyperlinksDictionary);
             }
-
         });
     </script>
 
