--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-map-item.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-map-item.html
@@ -1,9 +1,9 @@
-<link rel="import" href="../../../../lib/polymer/polymer.html">
+<link rel="import" href="../../../../../lib/polymer/polymer.html">
 
-<script src="../../../../lib/wicket/wicket.js"></script>
-<script src="../../../../lib/wicket/wicket-gmap3.js"></script>
+<script src="../../../../../lib/wicket/wicket.js"></script>
+<script src="../../../../../lib/wicket/wicket-gmap3.js"></script>
 
-<dom-module id="alexandria-mold-map-item">
+<dom-module id="alexandria-stamp-map-item">
 
     <template>
     </template>
@@ -13,7 +13,7 @@
 
     <script>
         Polymer({
-            is: 'alexandria-mold-map-item',
+            is: 'alexandria-stamp-map-item',
 
             properties : {
                 map: Object,
