--- a/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-map-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-map-view.html
@@ -12,8 +12,7 @@
 <dom-module id="alexandria-catalog-map-view">
 
     <template>
-        <alexandria-catalog-map mold="[[_view.mold]]"
-                                page-size="[[_pageSize]]"
+        <alexandria-catalog-map page-size="[[_pageSize]]"
                                 item-list="[[_itemList]]"
                                 count-item-list="[[_countItemList]]"
                                 center="[[_view.center]]"
