--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-card-wallet.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-card-wallet.html
@@ -1,14 +1,15 @@
-<link rel="import" href="../../../../lib/polymer/polymer.html">
-<link rel="import" href="../../../../lib/cotton-translator/cotton-translator-behavior.html">
-<link rel="import" href="alexandria-mold-card.html">
+<link rel="import" href="../../../../../lib/polymer/polymer.html">
+<link rel="import" href="../../../../../lib/cotton-translator/cotton-translator-behavior.html">
+<link rel="import" href="alexandria-stamp-behavior.html">
+<link rel="import" href="../alexandria-card.html">
 
-<dom-module id="alexandria-mold-card-wallet">
+<dom-module id="alexandria-stamp-card-wallet">
 
     <template>
-        <div hidden$="[[!wallet.cards.length]]">
+        <div hidden$="[[!_wallet.cards.length]]">
             <iron-pages class="layout horizontal flex wrap" selected="{{_selectedCard}}">
-                <template is="dom-repeat" items="[[wallet.cards]]">
-                    <li><alexandria-mold-card styles$="[[styles]]" card="[[item]]"></alexandria-mold-card></li>
+                <template is="dom-repeat" items="[[_wallet.cards]]">
+                    <li><alexandria-card style$="[[_style]]" card="[[item]]"></alexandria-card></li>
                 </template>
             </iron-pages>
             <div class="toolbar" hidden$="[[_noToolbar]]">
@@ -49,7 +50,7 @@
     </style>
 
     <script>
-        const AlexandriaMoldCardWalletDictionary = {
+        const AlexandriaStampCardWalletDictionary = {
             es: {
                 Previous: "anterior",
                 Next: "siguiente"
@@ -61,31 +62,32 @@
         };
 
         Polymer({
-            is: 'alexandria-mold-card-wallet',
+            is: 'alexandria-stamp-card-wallet',
 
-            behaviors: [ CottonBehaviors.TranslatorBehavior ],
+            behaviors: [ AlexandriaBehaviors.StampBehavior, CottonBehaviors.TranslatorBehavior ],
 
             properties : {
-                title : { type: String, value: function() { return null; } },
-                wallet : { type: Object, observer: '_refresh' },
-                styles : String,
+                _wallet: Object,
                 _selectedCard : { type: Number, value: function() { return 0; } },
                 _noToolbar : { type: Boolean, value: function() { return true; } }
             },
 
             attached: function () {
-                this.translate(AlexandriaMoldCardWalletDictionary);
+                this.translate(AlexandriaStampCardWalletDictionary);
             },
 
-            _refresh : function() {
-                var hasCards = (this.wallet != null && this.wallet.cards.length > 0);
+            _render : function() {
+                this._wallet = this.stamp.properties.wallet;
+
+                var hasCards = (this._wallet != null && this._wallet.cards.length > 0);
                 if (!hasCards) $(this).addClass("empty");
                 else $(this).removeClass("empty");
+
                 this._refreshToolbar();
             },
 
             _refreshToolbar : function() {
-                var count = this.wallet.cards.length;
+                var count = this._wallet.cards.length;
                 if (this._selectedCard == 0) $(this.$.previous).addClass("disabled");
                 else $(this.$.previous).removeClass("disabled");
                 if (this._selectedCard == count-1) $(this.$.next).addClass("disabled");
@@ -101,7 +103,7 @@
 
             _next : function() {
                 this._selectedCard++;
-                var count = this.wallet.cards.length;
+                var count = this._wallet.cards.length;
                 if (this._selectedCard >= count) this._selectedCard = count-1;
                 this._refreshToolbar();
             }
