--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-editor.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-editor.html
@@ -1,9 +1,7 @@
-<link rel="import" href="../../../../lib/polymer/polymer.html">
-<link rel="import" href="../../../../lib/cotton-translator/cotton-translator-behavior.html">
-<link rel="import" href="../../../../lib/cotton-zombie/cotton-zombie.html">
-<link rel="import" href="../../../../lib/paper-input/paper-input.html">
+<link rel="import" href="../../../../../lib/polymer/polymer.html">
+<link rel="import" href="../../../../../lib/paper-input/paper-input.html">
 
-<dom-module id="alexandria-mold-editor">
+<dom-module id="alexandria-stamp-editor">
 
     <template>
         <paper-input no-label-float value="{{value}}" on-keydown="_keyDown" on-blur="_close"></paper-input>
@@ -36,25 +34,12 @@
     </style>
 
     <script>
-        const AlexandriaMoldEditorDictionary = {
-            es: {
-            },
-            en: {
-            }
-        };
-
         Polymer({
-            is: 'alexandria-mold-editor',
-
-            behaviors: [ CottonBehaviors.TranslatorBehavior ],
+            is: 'alexandria-stamp-editor',
 
             properties : {
                 label: String,
                 value: String
-            },
-
-            attached: function () {
-                this.translate(AlexandriaMoldEditorDictionary);
             },
 
             focus : function() {
