--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-export-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-export-operation.html
@@ -1,22 +1,26 @@
-<link rel="import" href="../../../../lib/polymer/polymer.html">
-<link rel="import" href="../../../../lib/cotton-translator/cotton-translator-behavior.html">
-<link rel="import" href="../../../../lib/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../../../lib/paper-dialog/paper-dialog.html">
-<link rel="import" href="../../../../lib/paper-menu/paper-menu.html">
-<link rel="import" href="../../../../lib/paper-item/paper-item.html">
-<link rel="import" href="../alexandria-export-dialog.html">
-<link rel="import" href="alexandria-mold-operation-trigger.html">
+<link rel="import" href="../../../../../lib/polymer/polymer.html">
+<link rel="import" href="../../../../../lib/cotton-translator/cotton-translator-behavior.html">
+<link rel="import" href="../../../../../lib/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../../../../lib/paper-dialog/paper-dialog.html">
+<link rel="import" href="../../../../../lib/paper-menu/paper-menu.html">
+<link rel="import" href="../../../../../lib/paper-item/paper-item.html">
+<link rel="import" href="alexandria-stamp-behavior.html">
+<link rel="import" href="../../alexandria-export-dialog.html">
+<link rel="import" href="../alexandria-operation-trigger.html">
 
-<dom-module id="alexandria-mold-export-operation">
+<dom-module id="alexandria-stamp-export-operation">
 
     <template>
-        <alexandria-mold-operation-trigger id="operation" title="[[_title]]" icon="[[icon]]" styles="[[styles]]" mode="[[mode]]" on-execute="_openExportOptions"></alexandria-mold-operation-trigger>
+        <alexandria-operation-trigger id="operation" title="[[_title]]" icon="[[stamp.properties.alexandriaIcon]]"
+                                      styles="[[_style]]" mode="[[stamp.properties.mode]]"
+                                      on-execute="_openExportOptions"></alexandria-operation-trigger>
+
         <paper-dialog id="dialog" no-overlap horizontal-align="left" vertical-align="top">
-            <template is="dom-if" if="[[!title.length]]">
+            <template is="dom-if" if="[[!_title.length]]">
                 <h2>[[Export]]</h2>
             </template>
             <paper-menu>
-                <template is="dom-repeat" items="[[options]]">
+                <template is="dom-repeat" items="[[stamp.properties.options]]">
                     <paper-item name$="[[item]]" on-tap="_showExportDialog">[[item]]</paper-item>
                 </template>
             </paper-menu>
@@ -66,27 +70,26 @@
         };
 
         Polymer({
-            is: 'alexandria-mold-export-operation',
+            is: 'alexandria-stamp-export-operation',
 
-            behaviors: [ CottonBehaviors.TranslatorBehavior ],
+            behaviors: [ AlexandriaBehaviors.StampBehavior, CottonBehaviors.TranslatorBehavior ],
 
             properties : {
-                title : String,
-                _title : { type: String, observer: "_refreshTitle" },
-                from : String,
-                to : String,
-                option : String,
-                options : { type: Array, observer: "_selectOption" },
-                icon : String,
-                styles : String,
-                mode : String
+                _title : String,
+                option: String
             },
 
             attached: function () {
                 this.translate(AlexandriaMoldExportOperationDictionary);
             },
 
-            _selectOption : function() {
+            _render : function() {
+                var title = this.stamp.label;
+                this._title = title != null && title != "" ? title : this.Export;
+                this._updateSelectedOption();
+            },
+
+            _updateSelectedOption : function() {
                 if (this.options.length <= 0) return;
                 this.option = this.options[0];
             },
@@ -102,21 +105,18 @@
 
             _showExportDialog : function(e) {
                 this.$.dialog.close();
-                if (e != null)
-                    this.option = e.target.getAttribute("name");
+                if (e != null) this.option = e.target.getAttribute("name");
                 var dialog = this.querySelector("alexandria-export-dialog");
-                dialog.open({ min: parseInt(this.from), max: parseInt(this.to) });
-            },
-
-            _refreshTitle : function() {
-                this._title = this.title != null && this.title != "" ? this.title : this.Export;
+                var properties = this.stamp.properties;
+                dialog.open({ min: parseInt(properties.from), max: parseInt(properties.to) });
             },
 
             _export : function(e) {
                 var from = e.detail.from;
                 var to = e.detail.to;
-                this.fire("export-option", { from: from, to: to, option: this.option });
-            },
+                this.fire("export-item", { stamp: this.stamp.name, from: from, to: to, option: this.option });
+                e.stopPropagation();
+            }
 
         });
     </script>
