--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-preview-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-preview-operation.html
@@ -1,25 +1,28 @@
-<link rel="import" href="../../../../lib/polymer/polymer.html">
-<link rel="import" href="../../../../lib/cotton-translator/cotton-translator-behavior.html">
-<link rel="import" href="../../../../lib/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../../../lib/paper-dialog/paper-dialog.html">
-<link rel="import" href="../../../../lib/paper-menu/paper-menu.html">
-<link rel="import" href="../../../../lib/paper-item/paper-item.html">
-<link rel="import" href="../../../../lib/iron-icon/iron-icon.html">
-<link rel="import" href="../../../../lib/pdf-browser-viewer/pdf-browser-viewer.html">
-<link rel="import" href="../../../../lib/iron-resizable-behavior/iron-resizable-behavior.html">
-<link rel="import" href="alexandria-mold-operation-trigger.html">
+<link rel="import" href="../../../../../lib/polymer/polymer.html">
+<link rel="import" href="../../../../../lib/cotton-translator/cotton-translator-behavior.html">
+<link rel="import" href="../../../../../lib/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../../../../lib/paper-dialog/paper-dialog.html">
+<link rel="import" href="../../../../../lib/paper-menu/paper-menu.html">
+<link rel="import" href="../../../../../lib/paper-item/paper-item.html">
+<link rel="import" href="../../../../../lib/iron-icon/iron-icon.html">
+<link rel="import" href="../../../../../lib/pdf-browser-viewer/pdf-browser-viewer.html">
+<link rel="import" href="../../../../../lib/iron-resizable-behavior/iron-resizable-behavior.html">
+<link rel="import" href="alexandria-stamp-behavior.html">
+<link rel="import" href="../alexandria-operation-trigger.html">
 
-<dom-module id="alexandria-mold-preview-operation">
+<dom-module id="alexandria-stamp-preview-operation">
 
     <template>
         <div class="container">
-            <alexandria-mold-operation-trigger title="[[_title]]" icon="[[icon]]" styles="[[styles]]" mode="[[mode]]" on-execute="_preview"></alexandria-mold-operation-trigger>
+            <alexandria-operation-trigger title="[[_title]]" icon="[[stamp.properties.alexandriaIcon]]"
+                                          styles="[[_style]]" mode="[[stamp.properties.mode]]"
+                                          on-execute="_preview"></alexandria-operation-trigger>
         </div>
-        <div id="dialogContainer" class="alexandria-mold-preview-operation-0">
+        <div id="dialogContainer" class="alexandria-stamp-preview-operation-0">
             <paper-dialog id="dialog" no-overlap entry-animation="scale-up-animation" exit-animation="fade-out-animation" on-iron-overlay-closed="_overlayClosed">
                 <paper-icon-button icon="close" on-tap="_close"></paper-icon-button>
                 <div style="height:calc(100% - 40px)">
-                    <pdf-browser-viewer file="[[document]]" width="100%" height="100%"></pdf-browser-viewer>
+                    <pdf-browser-viewer file="[[stamp.properties.document]]" width="100%" height="100%"></pdf-browser-viewer>
                 </div>
             </paper-dialog>
         </div>
@@ -73,23 +76,18 @@
         };
 
         Polymer({
-            is: 'alexandria-mold-preview-operation',
+            is: 'alexandria-stamp-preview-operation',
 
-            behaviors: [ CottonBehaviors.TranslatorBehavior, Polymer.IronResizableBehavior ],
+            behaviors: [ AlexandriaBehaviors.StampBehavior, CottonBehaviors.TranslatorBehavior, Polymer.IronResizableBehavior ],
 
             listeners: { 'iron-resize': '_fitDialog' },
 
             properties : {
-                title : { type: String, observer: '_refreshTitle' },
-                document : String,
+                _title : String,
                 width: Number,
                 _width : { type: Number, value: function() { return 100; } },
                 height: Number,
-                _height : { type: Number, value: function() { return 100; } },
-                _title : String,
-                icon : String,
-                styles : String,
-                mode : String
+                _height : { type: Number, value: function() { return 100; } }
             },
 
             attached: function () {
@@ -114,9 +112,9 @@
                 this.$.dialog.style.cssText += style;
             },
 
-            _refreshTitle : function() {
-                var titleDefined = this.title != null && this.title != "";
-                this._title = titleDefined ? this.title : this.Preview;
+            _render : function() {
+                var title = this.stamp.label;
+                this._title = title != null && title != "" ? title : this.Preview;
             },
 
             _preview : function(e) {
