--- a/alexandria/activity-elements-activity/src/widgets/alexandriatimerangenavigator/alexandria-vertical-time-range-navigator.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandriatimerangenavigator/alexandria-vertical-time-range-navigator.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../../../lib/cotton-translator/cotton-translator-behavior.html">
 <link rel="import" href="../../../lib/cotton-timeline/cotton-timeline.html">
 <link rel="import" href="../../../lib/iron-resizable-behavior/iron-resizable-behavior.html">
+<link rel="import" href="../../../lib/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../_common/alexandria-date-selector.html">
 <link rel="import" href="../_common/alexandria-scale-selector-slider.html">
 
@@ -15,14 +16,17 @@
 
     <template>
         <cotton-timeline class="layout vertical center-justified" id="timeline"
-                                       on-next="_moveNext"
-                                       on-before="_movePrevious"
-                                       on-select="_updateTo"
-                                       on-tap-timeline="_showDateSelector">
-            <div class="scale-component">
+                         on-next="_moveNext"
+                         on-before="_movePrevious"
+                         on-select="_updateTo"
+                         on-tap-timeline="_showDateSelector">
+            <div class="toolbar-top">
+                <paper-icon-button icon="icons:date-range" on-tap="_showDateSelector"></paper-icon-button>
+            </div>
+            <div class="toolbar-bottom">
                 <alexandria-scale-selector-slider scales="[[_scaleList]]"
-                                           selected-scale="[[_selectedScale]]"
-                                           on-scale-selected="_notifyScaleSelected"></alexandria-scale-selector-slider>
+                                                  selected-scale="[[_selectedScale]]"
+                                                  on-scale-selected="_notifyScaleSelected"></alexandria-scale-selector-slider>
             </div>
         </cotton-timeline>
         <alexandria-date-selector id="dateSelector" date="[[_range.min]]" scale="[[_selectedScale]]" label="" on-change="_updateRangeLimit"></alexandria-date-selector>
@@ -31,6 +35,13 @@
     <style>
         :host cotton-timeline {
             height: calc(100% - 25px);
+        }
+        :host paper-icon-button {
+            padding: 0;
+            margin: 0 4px;
+            display: block;
+            height: 18px;
+            width: 18px;
         }
         :host alexandria-date-selector {
             position: absolute;
@@ -57,10 +68,10 @@
             is: 'alexandria-vertical-time-range-navigator',
 
             behaviors: [ CottonBehaviors.CarrierBehavior,
-                         CottonBehaviors.PushBehavior,
-                         CottonBehaviors.TranslatorBehavior,
-                         AlexandriaTimeRangeNavigatorBehaviors.Requester,
-                         AlexandriaTimeRangeNavigatorBehaviors.NotifierListener ],
+                CottonBehaviors.PushBehavior,
+                CottonBehaviors.TranslatorBehavior,
+                AlexandriaTimeRangeNavigatorBehaviors.Requester,
+                AlexandriaTimeRangeNavigatorBehaviors.NotifierListener ],
 
             properties : {
                 _range : { type : Object, value: function() { return null; } },
@@ -86,6 +97,7 @@
                 this._range = range;
                 this._selectedScale = range.scale;
                 this.$.timeline.scale = range.scale;
+                this.$.timeline.update(range.max);
             },
 
             _refreshOlapRange : function(range) {
