alexandria-activity: Added Mold Layout generation

--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-layout-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-layout-behavior.html
@@ -64,7 +64,7 @@
 
         _blockHidden : function(block) {
             var result = this.item.itemBlockList.filter(s => s.name == block.name);
-            return result.length > 0 ? result[0].hidden : true;
+            return result.length > 0 ? result[0].hidden : false;
         },
 
         _blockLayout : function (block) {
